--- a/.github/workflows/dz/oop.yml
+++ b/.github/workflows/dz/oop.yml
@@ -1,5 +1,7 @@
-name: Test Workflow
-on: workflow_dispatch 
+name: CI/CD Pipeline
+on: 
+  push:
+    branches: [ main, master ]
 jobs: 
   print:
     runs-on: windows-latest
