--- a/.github/workflows/dz/oop.yml
+++ b/.github/workflows/dz/oop.yml
@@ -2,6 +2,8 @@ name: CI/CD Pipeline
 on: 
   push:
     branches: [ main, master ]
+  pull_request:
+     branches: [ main, master ]
 jobs: 
   print:
     runs-on: windows-latest
